--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "amd": {},
-  "volo": {
-    "baseUrl": "www/script/lib",
-    "dependencies": {
-      "jquery": "github:jquery/jquery/2.1.0",
-      "text": "github:requirejs/text/2.0.10",
-      "underscore": "github:amdjs/underscore/1.5.2",
-      "backbone": "github:amdjs/backbone/1.1.0",
-      "domReady": "github:requirejs/domReady/2.0.1",
-      "require": "github:jrburke/requirejs/2.1.11"
-    }
-  }
+  "name": "SIFES",
+  "version": "0.0.0",
+  "description": "Simple Front End Stack",
+  "main": "app.build.js",
+  "dependencies": {
+    "connect": "^3.0.1",
+    "serve-static": "^1.2.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "github.com/MrRhino/SIFES"
+  },
+  "author": "Ulrik Sorber",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MrRhino/SIFES/issues"
+  },
+  "homepage": "https://github.com/MrRhino/SIFES"
 }
